[gd_scene load_steps=8 format=3 uid="uid://ek4dp684315i"]

[ext_resource type="Script" path="res://scenes/shopping_cart_counter.gd" id="1_1khna"]
[ext_resource type="Texture2D" uid="uid://bj5c2ynvrbssr" path="res://assets/graphics/items/triangle.png" id="1_ypf6g"]
[ext_resource type="Texture2D" uid="uid://b4na0dcxlcbhg" path="res://assets/graphics/regular-cart-shopping.png" id="2_qgdxc"]
[ext_resource type="Texture2D" uid="uid://65b8wt87apoe" path="res://assets/graphics/items/rectangle.png" id="2_twq7h"]
[ext_resource type="Texture2D" uid="uid://cj2l2a6sr6d3a" path="res://assets/graphics/items/circle.png" id="3_dcl5v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1n8rl"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vyjlo"]

[node name="ShoppingCartCounter" type="MarginContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -187.0
offset_bottom = 81.0
grow_horizontal = 0
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 32
script = ExtResource("1_1khna")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1n8rl")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="Icon" type="TextureRect" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 16)
layout_mode = 2
texture = ExtResource("2_qgdxc")
expand_mode = 1
stretch_mode = 5

[node name="Separator" type="Panel" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_vyjlo")

[node name="TriangleContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/TriangleContainer"]
layout_mode = 2
texture = ExtResource("1_ypf6g")
stretch_mode = 3

[node name="TriangleLabel" type="Label" parent="PanelContainer/HBoxContainer/TriangleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="RectangleContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/RectangleContainer"]
layout_mode = 2
texture = ExtResource("2_twq7h")
stretch_mode = 3

[node name="RectangleLabel" type="Label" parent="PanelContainer/HBoxContainer/RectangleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="CircleContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/CircleContainer"]
layout_mode = 2
texture = ExtResource("3_dcl5v")
stretch_mode = 3

[node name="CircleLabel" type="Label" parent="PanelContainer/HBoxContainer/CircleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
